tests/netconvert/errors/invalid_argument_vclass/errors.netconvert
Error: Unknown vehicle class 'bogus'.
Quitting (on error).
